qt/gen_qgraphicswidget.h

typedef struct QAction QAction;
typedef struct QFont QFont;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsLayout QGraphicsLayout;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QKeySequence QKeySequence;
typedef struct QMarginsF QMarginsF;
typedef struct QMetaObject QMetaObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPalette QPalette;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QStyle QStyle;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QWidget QWidget;
QGraphicsWidget* QGraphicsWidget_new();
QGraphicsWidget* QGraphicsWidget_new2(QGraphicsItem* parent);
QGraphicsWidget* QGraphicsWidget_new3(QGraphicsItem* parent, int wFlags);
QMetaObject* QGraphicsWidget_metaObject(const QGraphicsWidget* self);
void* QGraphicsWidget_metacast(QGraphicsWidget* self, const char* param1);
int QGraphicsWidget_metacall(QGraphicsWidget* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsWidget_tr(const char* s);
struct miqt_string QGraphicsWidget_trUtf8(const char* s);
QGraphicsLayout* QGraphicsWidget_layout(const QGraphicsWidget* self);
void QGraphicsWidget_setLayout(QGraphicsWidget* self, QGraphicsLayout* layout);
void QGraphicsWidget_adjustSize(QGraphicsWidget* self);
int QGraphicsWidget_layoutDirection(const QGraphicsWidget* self);
void QGraphicsWidget_setLayoutDirection(QGraphicsWidget* self, int direction);
void QGraphicsWidget_unsetLayoutDirection(QGraphicsWidget* self);
QStyle* QGraphicsWidget_style(const QGraphicsWidget* self);
void QGraphicsWidget_setStyle(QGraphicsWidget* self, QStyle* style);
QFont* QGraphicsWidget_font(const QGraphicsWidget* self);
void QGraphicsWidget_setFont(QGraphicsWidget* self, QFont* font);
QPalette* QGraphicsWidget_palette(const QGraphicsWidget* self);
void QGraphicsWidget_setPalette(QGraphicsWidget* self, QPalette* palette);
bool QGraphicsWidget_autoFillBackground(const QGraphicsWidget* self);
void QGraphicsWidget_setAutoFillBackground(QGraphicsWidget* self, bool enabled);
void QGraphicsWidget_resize(QGraphicsWidget* self, QSizeF* size);
void QGraphicsWidget_resize2(QGraphicsWidget* self, double w, double h);
QSizeF* QGraphicsWidget_size(const QGraphicsWidget* self);
void QGraphicsWidget_setGeometry(QGraphicsWidget* self, QRectF* rect);
void QGraphicsWidget_setGeometry2(QGraphicsWidget* self, double x, double y, double w, double h);
QRectF* QGraphicsWidget_rect(const QGraphicsWidget* self);
void QGraphicsWidget_setContentsMargins(QGraphicsWidget* self, double left, double top, double right, double bottom);
void QGraphicsWidget_setContentsMarginsWithMargins(QGraphicsWidget* self, QMarginsF* margins);
void QGraphicsWidget_getContentsMargins(const QGraphicsWidget* self, double* left, double* top, double* right, double* bottom);
void QGraphicsWidget_setWindowFrameMargins(QGraphicsWidget* self, double left, double top, double right, double bottom);
void QGraphicsWidget_setWindowFrameMarginsWithMargins(QGraphicsWidget* self, QMarginsF* margins);
void QGraphicsWidget_getWindowFrameMargins(const QGraphicsWidget* self, double* left, double* top, double* right, double* bottom);
void QGraphicsWidget_unsetWindowFrameMargins(QGraphicsWidget* self);
QRectF* QGraphicsWidget_windowFrameGeometry(const QGraphicsWidget* self);
QRectF* QGraphicsWidget_windowFrameRect(const QGraphicsWidget* self);
int QGraphicsWidget_windowFlags(const QGraphicsWidget* self);
int QGraphicsWidget_windowType(const QGraphicsWidget* self);
void QGraphicsWidget_setWindowFlags(QGraphicsWidget* self, int wFlags);
bool QGraphicsWidget_isActiveWindow(const QGraphicsWidget* self);
void QGraphicsWidget_setWindowTitle(QGraphicsWidget* self, struct miqt_string title);
struct miqt_string QGraphicsWidget_windowTitle(const QGraphicsWidget* self);
int QGraphicsWidget_focusPolicy(const QGraphicsWidget* self);
void QGraphicsWidget_setFocusPolicy(QGraphicsWidget* self, int policy);
void QGraphicsWidget_setTabOrder(QGraphicsWidget* first, QGraphicsWidget* second);
QGraphicsWidget* QGraphicsWidget_focusWidget(const QGraphicsWidget* self);
int QGraphicsWidget_grabShortcut(QGraphicsWidget* self, QKeySequence* sequence);
void QGraphicsWidget_releaseShortcut(QGraphicsWidget* self, int id);
void QGraphicsWidget_setShortcutEnabled(QGraphicsWidget* self, int id);
void QGraphicsWidget_setShortcutAutoRepeat(QGraphicsWidget* self, int id);
void QGraphicsWidget_addAction(QGraphicsWidget* self, QAction* action);
void QGraphicsWidget_addActions(QGraphicsWidget* self, struct miqt_array /* of QAction* */  actions);
void QGraphicsWidget_insertActions(QGraphicsWidget* self, QAction* before, struct miqt_array /* of QAction* */  actions);
void QGraphicsWidget_insertAction(QGraphicsWidget* self, QAction* before, QAction* action);
void QGraphicsWidget_removeAction(QGraphicsWidget* self, QAction* action);
struct miqt_array /* of QAction* */  QGraphicsWidget_actions(const QGraphicsWidget* self);
void QGraphicsWidget_setAttribute(QGraphicsWidget* self, int attribute);
bool QGraphicsWidget_testAttribute(const QGraphicsWidget* self, int attribute);
int QGraphicsWidget_type(const QGraphicsWidget* self);
void QGraphicsWidget_paint(QGraphicsWidget* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
void QGraphicsWidget_paintWindowFrame(QGraphicsWidget* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
QRectF* QGraphicsWidget_boundingRect(const QGraphicsWidget* self);
QPainterPath* QGraphicsWidget_shape(const QGraphicsWidget* self);
void QGraphicsWidget_geometryChanged(QGraphicsWidget* self);
void QGraphicsWidget_connect_geometryChanged(QGraphicsWidget* self, intptr_t slot);
void QGraphicsWidget_layoutChanged(QGraphicsWidget* self);
void QGraphicsWidget_connect_layoutChanged(QGraphicsWidget* self, intptr_t slot);
bool QGraphicsWidget_close(QGraphicsWidget* self);
struct miqt_string QGraphicsWidget_tr2(const char* s, const char* c);
struct miqt_string QGraphicsWidget_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsWidget_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsWidget_trUtf83(const char* s, const char* c, int n);
int QGraphicsWidget_grabShortcut2(QGraphicsWidget* self, QKeySequence* sequence, int context);
void QGraphicsWidget_setShortcutEnabled2(QGraphicsWidget* self, int id, bool enabled);
void QGraphicsWidget_setShortcutAutoRepeat2(QGraphicsWidget* self, int id, bool enabled);
void QGraphicsWidget_setAttribute2(QGraphicsWidget* self, int attribute, bool on);
bool QGraphicsWidget_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsWidget_virtualbase_metaObject(const void* self);
bool QGraphicsWidget_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsWidget_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsWidget_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsWidget_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsWidget_override_virtual_setGeometry(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_setGeometry(void* self, QRectF* rect);
bool QGraphicsWidget_override_virtual_getContentsMargins(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_getContentsMargins(const void* self, double* left, double* top, double* right, double* bottom);
bool QGraphicsWidget_override_virtual_type(void* self, intptr_t slot);
int QGraphicsWidget_virtualbase_type(const void* self);
bool QGraphicsWidget_override_virtual_paint(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_paint(void* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsWidget_override_virtual_paintWindowFrame(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_paintWindowFrame(void* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsWidget_override_virtual_boundingRect(void* self, intptr_t slot);
QRectF* QGraphicsWidget_virtualbase_boundingRect(const void* self);
bool QGraphicsWidget_override_virtual_shape(void* self, intptr_t slot);
QPainterPath* QGraphicsWidget_virtualbase_shape(const void* self);