qt/gen_qgraphicswidget.nim


proc fcQGraphicsWidget_new(): ptr cQGraphicsWidget {.importc: "QGraphicsWidget_new".}
proc fcQGraphicsWidget_new2(parent: pointer): ptr cQGraphicsWidget {.importc: "QGraphicsWidget_new2".}
proc fcQGraphicsWidget_new3(parent: pointer, wFlags: cint): ptr cQGraphicsWidget {.importc: "QGraphicsWidget_new3".}
proc fcQGraphicsWidget_metaObject(self: pointer, ): pointer {.importc: "QGraphicsWidget_metaObject".}
proc fcQGraphicsWidget_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsWidget_metacast".}
proc fcQGraphicsWidget_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsWidget_metacall".}
proc fcQGraphicsWidget_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsWidget_tr".}
proc fcQGraphicsWidget_trUtf8(s: cstring): struct_miqt_string {.importc: "QGraphicsWidget_trUtf8".}
proc fcQGraphicsWidget_layout(self: pointer, ): pointer {.importc: "QGraphicsWidget_layout".}
proc fcQGraphicsWidget_setLayout(self: pointer, layout: pointer): void {.importc: "QGraphicsWidget_setLayout".}
proc fcQGraphicsWidget_adjustSize(self: pointer, ): void {.importc: "QGraphicsWidget_adjustSize".}
proc fcQGraphicsWidget_layoutDirection(self: pointer, ): cint {.importc: "QGraphicsWidget_layoutDirection".}
proc fcQGraphicsWidget_setLayoutDirection(self: pointer, direction: cint): void {.importc: "QGraphicsWidget_setLayoutDirection".}
proc fcQGraphicsWidget_unsetLayoutDirection(self: pointer, ): void {.importc: "QGraphicsWidget_unsetLayoutDirection".}
proc fcQGraphicsWidget_style(self: pointer, ): pointer {.importc: "QGraphicsWidget_style".}
proc fcQGraphicsWidget_setStyle(self: pointer, style: pointer): void {.importc: "QGraphicsWidget_setStyle".}
proc fcQGraphicsWidget_font(self: pointer, ): pointer {.importc: "QGraphicsWidget_font".}
proc fcQGraphicsWidget_setFont(self: pointer, font: pointer): void {.importc: "QGraphicsWidget_setFont".}
proc fcQGraphicsWidget_palette(self: pointer, ): pointer {.importc: "QGraphicsWidget_palette".}
proc fcQGraphicsWidget_setPalette(self: pointer, palette: pointer): void {.importc: "QGraphicsWidget_setPalette".}
proc fcQGraphicsWidget_autoFillBackground(self: pointer, ): bool {.importc: "QGraphicsWidget_autoFillBackground".}
proc fcQGraphicsWidget_setAutoFillBackground(self: pointer, enabled: bool): void {.importc: "QGraphicsWidget_setAutoFillBackground".}
proc fcQGraphicsWidget_resize(self: pointer, size: pointer): void {.importc: "QGraphicsWidget_resize".}
proc fcQGraphicsWidget_resize2(self: pointer, w: float64, h: float64): void {.importc: "QGraphicsWidget_resize2".}
proc fcQGraphicsWidget_size(self: pointer, ): pointer {.importc: "QGraphicsWidget_size".}
proc fcQGraphicsWidget_setGeometry(self: pointer, rect: pointer): void {.importc: "QGraphicsWidget_setGeometry".}
proc fcQGraphicsWidget_setGeometry2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QGraphicsWidget_setGeometry2".}
proc fcQGraphicsWidget_rect(self: pointer, ): pointer {.importc: "QGraphicsWidget_rect".}
proc fcQGraphicsWidget_setContentsMargins(self: pointer, left: float64, top: float64, right: float64, bottom: float64): void {.importc: "QGraphicsWidget_setContentsMargins".}
proc fcQGraphicsWidget_setContentsMarginsWithMargins(self: pointer, margins: pointer): void {.importc: "QGraphicsWidget_setContentsMarginsWithMargins".}
proc fcQGraphicsWidget_getContentsMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void {.importc: "QGraphicsWidget_getContentsMargins".}
proc fcQGraphicsWidget_setWindowFrameMargins(self: pointer, left: float64, top: float64, right: float64, bottom: float64): void {.importc: "QGraphicsWidget_setWindowFrameMargins".}
proc fcQGraphicsWidget_setWindowFrameMarginsWithMargins(self: pointer, margins: pointer): void {.importc: "QGraphicsWidget_setWindowFrameMarginsWithMargins".}
proc fcQGraphicsWidget_getWindowFrameMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void {.importc: "QGraphicsWidget_getWindowFrameMargins".}
proc fcQGraphicsWidget_unsetWindowFrameMargins(self: pointer, ): void {.importc: "QGraphicsWidget_unsetWindowFrameMargins".}
proc fcQGraphicsWidget_windowFrameGeometry(self: pointer, ): pointer {.importc: "QGraphicsWidget_windowFrameGeometry".}
proc fcQGraphicsWidget_windowFrameRect(self: pointer, ): pointer {.importc: "QGraphicsWidget_windowFrameRect".}
proc fcQGraphicsWidget_windowFlags(self: pointer, ): cint {.importc: "QGraphicsWidget_windowFlags".}
proc fcQGraphicsWidget_windowType(self: pointer, ): cint {.importc: "QGraphicsWidget_windowType".}
proc fcQGraphicsWidget_setWindowFlags(self: pointer, wFlags: cint): void {.importc: "QGraphicsWidget_setWindowFlags".}
proc fcQGraphicsWidget_isActiveWindow(self: pointer, ): bool {.importc: "QGraphicsWidget_isActiveWindow".}
proc fcQGraphicsWidget_setWindowTitle(self: pointer, title: struct_miqt_string): void {.importc: "QGraphicsWidget_setWindowTitle".}
proc fcQGraphicsWidget_windowTitle(self: pointer, ): struct_miqt_string {.importc: "QGraphicsWidget_windowTitle".}
proc fcQGraphicsWidget_focusPolicy(self: pointer, ): cint {.importc: "QGraphicsWidget_focusPolicy".}
proc fcQGraphicsWidget_setFocusPolicy(self: pointer, policy: cint): void {.importc: "QGraphicsWidget_setFocusPolicy".}
proc fcQGraphicsWidget_setTabOrder(first: pointer, second: pointer): void {.importc: "QGraphicsWidget_setTabOrder".}
proc fcQGraphicsWidget_focusWidget(self: pointer, ): pointer {.importc: "QGraphicsWidget_focusWidget".}
proc fcQGraphicsWidget_grabShortcut(self: pointer, sequence: pointer): cint {.importc: "QGraphicsWidget_grabShortcut".}
proc fcQGraphicsWidget_releaseShortcut(self: pointer, id: cint): void {.importc: "QGraphicsWidget_releaseShortcut".}
proc fcQGraphicsWidget_setShortcutEnabled(self: pointer, id: cint): void {.importc: "QGraphicsWidget_setShortcutEnabled".}
proc fcQGraphicsWidget_setShortcutAutoRepeat(self: pointer, id: cint): void {.importc: "QGraphicsWidget_setShortcutAutoRepeat".}
proc fcQGraphicsWidget_addAction(self: pointer, action: pointer): void {.importc: "QGraphicsWidget_addAction".}
proc fcQGraphicsWidget_addActions(self: pointer, actions: struct_miqt_array): void {.importc: "QGraphicsWidget_addActions".}
proc fcQGraphicsWidget_insertActions(self: pointer, before: pointer, actions: struct_miqt_array): void {.importc: "QGraphicsWidget_insertActions".}
proc fcQGraphicsWidget_insertAction(self: pointer, before: pointer, action: pointer): void {.importc: "QGraphicsWidget_insertAction".}
proc fcQGraphicsWidget_removeAction(self: pointer, action: pointer): void {.importc: "QGraphicsWidget_removeAction".}
proc fcQGraphicsWidget_actions(self: pointer, ): struct_miqt_array {.importc: "QGraphicsWidget_actions".}
proc fcQGraphicsWidget_setAttribute(self: pointer, attribute: cint): void {.importc: "QGraphicsWidget_setAttribute".}
proc fcQGraphicsWidget_testAttribute(self: pointer, attribute: cint): bool {.importc: "QGraphicsWidget_testAttribute".}
proc fcQGraphicsWidget_typeX(self: pointer, ): cint {.importc: "QGraphicsWidget_type".}
proc fcQGraphicsWidget_paint(self: pointer, painter: pointer, option: pointer, widget: pointer): void {.importc: "QGraphicsWidget_paint".}
proc fcQGraphicsWidget_paintWindowFrame(self: pointer, painter: pointer, option: pointer, widget: pointer): void {.importc: "QGraphicsWidget_paintWindowFrame".}
proc fcQGraphicsWidget_boundingRect(self: pointer, ): pointer {.importc: "QGraphicsWidget_boundingRect".}
proc fcQGraphicsWidget_shape(self: pointer, ): pointer {.importc: "QGraphicsWidget_shape".}
proc fcQGraphicsWidget_geometryChanged(self: pointer, ): void {.importc: "QGraphicsWidget_geometryChanged".}
proc fQGraphicsWidget_connect_geometryChanged(self: pointer, slot: int) {.importc: "QGraphicsWidget_connect_geometryChanged".}
proc fcQGraphicsWidget_layoutChanged(self: pointer, ): void {.importc: "QGraphicsWidget_layoutChanged".}
proc fQGraphicsWidget_connect_layoutChanged(self: pointer, slot: int) {.importc: "QGraphicsWidget_connect_layoutChanged".}
proc fcQGraphicsWidget_close(self: pointer, ): bool {.importc: "QGraphicsWidget_close".}
proc fcQGraphicsWidget_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsWidget_tr2".}
proc fcQGraphicsWidget_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsWidget_tr3".}
proc fcQGraphicsWidget_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsWidget_trUtf82".}
proc fcQGraphicsWidget_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsWidget_trUtf83".}
proc fcQGraphicsWidget_grabShortcut2(self: pointer, sequence: pointer, context: cint): cint {.importc: "QGraphicsWidget_grabShortcut2".}
proc fcQGraphicsWidget_setShortcutEnabled2(self: pointer, id: cint, enabled: bool): void {.importc: "QGraphicsWidget_setShortcutEnabled2".}
proc fcQGraphicsWidget_setShortcutAutoRepeat2(self: pointer, id: cint, enabled: bool): void {.importc: "QGraphicsWidget_setShortcutAutoRepeat2".}
proc fcQGraphicsWidget_setAttribute2(self: pointer, attribute: cint, on: bool): void {.importc: "QGraphicsWidget_setAttribute2".}
proc fQGraphicsWidget_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QGraphicsWidget_virtualbase_metaObject".}
proc fcQGraphicsWidget_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_metaObject".}
proc fQGraphicsWidget_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QGraphicsWidget_virtualbase_metacast".}
proc fcQGraphicsWidget_override_virtual_metacast(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_metacast".}
proc fQGraphicsWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsWidget_virtualbase_metacall".}
proc fcQGraphicsWidget_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_metacall".}
proc fQGraphicsWidget_virtualbase_setGeometry(self: pointer, rect: pointer): void{.importc: "QGraphicsWidget_virtualbase_setGeometry".}
proc fcQGraphicsWidget_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_setGeometry".}
proc fQGraphicsWidget_virtualbase_getContentsMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void{.importc: "QGraphicsWidget_virtualbase_getContentsMargins".}
proc fcQGraphicsWidget_override_virtual_getContentsMargins(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_getContentsMargins".}
proc fQGraphicsWidget_virtualbase_type(self: pointer, ): cint{.importc: "QGraphicsWidget_virtualbase_type".}
proc fcQGraphicsWidget_override_virtual_typeX(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_type".}
proc fQGraphicsWidget_virtualbase_paint(self: pointer, painter: pointer, option: pointer, widget: pointer): void{.importc: "QGraphicsWidget_virtualbase_paint".}
proc fcQGraphicsWidget_override_virtual_paint(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_paint".}
proc fQGraphicsWidget_virtualbase_paintWindowFrame(self: pointer, painter: pointer, option: pointer, widget: pointer): void{.importc: "QGraphicsWidget_virtualbase_paintWindowFrame".}
proc fcQGraphicsWidget_override_virtual_paintWindowFrame(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_paintWindowFrame".}
proc fQGraphicsWidget_virtualbase_boundingRect(self: pointer, ): pointer{.importc: "QGraphicsWidget_virtualbase_boundingRect".}
proc fcQGraphicsWidget_override_virtual_boundingRect(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_boundingRect".}
proc fQGraphicsWidget_virtualbase_shape(self: pointer, ): pointer{.importc: "QGraphicsWidget_virtualbase_shape".}
proc fcQGraphicsWidget_override_virtual_shape(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_shape".}
